unit test mock week 6